<resources>
    <string name="app_name">CodeGram</string>
    <string name="hint_user_name">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="login_btn">Login</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_reg_email">Correo</string>
    <string name="hint_reg_user">Usuario</string>
    <string name="hint_reg_conf_password">Confirmar Contraseña</string>
    <string name="reg_btn">Únete</string>
    <string name="hint_reg_name">Nombre</string>
    <string name="reg_toolbar">Crear Cuenta</string>
    <string name="hint_user_name_card">Mario Mendoza</string>
    <string name="first_word_card">Hace</string>
    <string name="time_card_card">4 días</string>
    <string name="like_number_card">10 Me gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_profile">Yo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="second_word_detail">Me gusta</string>
    <string name="title_image_detail">\"Todo el mundo debe programar\"</string>
    <string name="lorem_details">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex</string>
    <string name="transition_name_picture">transition_name_picture</string>
    <string name="search_hint">Buscar...</string>
    <string name="hint_edtTitle">Titulo</string>
    <string name="hint_edtDescription">Descripción</string>
    <string name="sumit_btn_image">Crear Post</string>



    <string name="facebook_app_id">1023261221162949</string>
    <string name="fb_login_protocol_scheme">fb1023261221162949</string>

</resources>
