<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ve.com.mariomendoza.codegram.view.RegisterActivity">
    <include layout="@layout/actionbar_toolbar"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_horizontal_log"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_user"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/reg_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_reg_conf_password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/reg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn"
            android:theme="@style/RaisedButtonDark"/>

    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
