<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/coner_radius_cardview"
    android:layout_marginBottom="@dimen/padding_horizontal_log">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/image_cardview"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom"
            android:paddingLeft="@dimen/padding_horizontal_log"
            android:paddingBottom="@dimen/padding_horizontal_log"
            android:background="@color/background_text_card">
            <TextView
                android:id="@+id/userNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_user_name_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsixe_user_name_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/firstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_word_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsixe_first_word_card"/>
                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_card_card"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/marginleft_time_card"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/like_margin_top_card">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector" />

                <TextView
                    android:id="@+id/likesCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/like_number_card"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="@dimen/marginleft_time_card"/>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</android.support.v7.widget.CardView>