<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ve.com.mariomendoza.codegram.post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:scaleType="centerCrop"
            android:background="@color/background_text_card"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edtTitle"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:theme="@style/EditextBlack"
            android:layout_marginTop="@dimen/margin_top_editext">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_edtDescription"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sumit_btn_image"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sumit_btn_image"
            android:theme="@style/RaisedButtonDark"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
