<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ve.com.mariomendoza.codegram.login.view.LoginActivity"
    android:background="@color/colorPrimary">

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/logo" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_log">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditextWhite">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_user_name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditextWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_btn"
                    android:theme="@style/RaisedButtonDark"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/botton_create_a_count"
                    android:layout_marginTop="@dimen/like_margin_top_card"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dontHaveAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dont_have_account"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsixe_donthaveaccount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/createHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_createhere"
                        android:layout_toRightOf="@id/dontHaveAccount"
                        android:text="@string/create_here"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsixe_donthaveaccount"
                        android:textStyle="bold" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressbarLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>