<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ve.com.mariomendoza.codegram.view.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_layout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:background="@drawable/image_cardview"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_top_editext">

            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsixe_user_name_card"
                android:text="@string/hint_user_name_card"
                android:paddingLeft="@dimen/padding_horizontal_margin"
                android:paddingRight="@dimen/padding_horizontal_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_horizontal_margin"
            android:paddingLeft="@dimen/padding_horizontal_margin"
            android:paddingRight="@dimen/padding_horizontal_margin">

            <TextView
                android:id="@+id/likeNumberDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_like_number"
                android:text="152" />

            <TextView
                android:id="@+id/secondWordDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_like_number"
                android:text="@string/second_word_detail"
                android:layout_marginLeft="@dimen/padding_horizontal_margin"/>

        </LinearLayout>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_divider"
                android:background="@color/colorPrimaryDark">
            </View>

            <TextView
                android:id="@+id/titleImageDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_like_number"
                android:text="@string/title_image_detail"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/margin_top_editext"/>

            <TextView
                android:id="@+id/contentImageDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_like_number"
                android:text="@string/lorem_details"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/margin_top_editext"
                android:paddingLeft="@dimen/padding_horizontal_detail_text"
                android:paddingRight="@dimen/padding_horizontal_detail_text"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>




</android.support.design.widget.CoordinatorLayout>
